chip overflow link color fix

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -52,7 +52,7 @@
       }
 
       .p-search-and-filter__selected-count {
-        color: $colors--theme--border-information;
+        color: $colors--theme--link-default;
         cursor: pointer;
         position: absolute;
         right: 0.5rem;
